--- a/static/styles.css
+++ b/static/styles.css
@@ -744,12 +744,18 @@ body {
     animation: rotateVerified 0.5s ease-out;
 }
 
+.material-icons .partner-logos{
+    width: 16px;
+    height: 16px;
+    object-fit: contain;
+}
+
 .videoChipComponent{
     display: flex;
     align-items: center;
     gap: 6px;
-    flex-wrap: wrap;  
-    margin-top: 10px; 
+    flex-wrap: wrap;
+    margin-top: 10px;
 }
 
 @keyframes rotateVerified {
